--- a/content/blog/55.md
+++ b/content/blog/55.md
@@ -1,9 +1,10 @@
 ---
-title: "55"
-excerpt: "555"
+title: "66"
+excerpt: "666"
 date: "2026-01-26"
 author: "OIKO Gestion"
-category: "actualites"
+category: "immobilier"
 ---
 
-5555
+6666
+
